apps/base/demo-app/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE_PREFIX}-demo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: ${NAMESPACE_PREFIX}-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: ${NAMESPACE_PREFIX}-demo-app
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 80
