apps/base/demo-app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-app
  namespace: ${NAMESPACE_PREFIX}-demo-app
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo-app.${DOMAIN}`)
      kind: Rule
      services:
        - name: demo-app
          port: 80
